# CMakeMultiTypeBuild

./: CMakeLists.txt  clean.py
Application/Apptest1/: CMakeLists.txt
Application/Apptest1/inc/: appconfig.h  appconfig.h.in  apptest1.h
Application/Apptest1/src/: apptest1.c
Lib/Libtest1/: CMakeLists.txt
Lib/Libtest1/inc/: libtest1.h
Lib/Libtest1/src/: libtest1.c  libtest1_1.c
